AX: Audio Description tracks are not labeled correctly, causing user confusion https://bugs.webkit.org/show_bug.cgi?id=160652 <rdar://problem/27742208>

Reviewed by Antoine Quint.

* http/tests/media/hls/hls-accessiblity-describes-video-menu-expected.txt: Added.
* http/tests/media/hls/hls-accessiblity-describes-video-menu.html: Added.

* media/trackmenu-test.js:
(clickCCButton): Fail immediately if "video" is null or not a media element. Make failure
logging more descriptive.

* platform/gtk/TestExpectations: Skip new test.

* platform/ios-simulator/media/video-controls-captions-trackmenu-expected.txt: Updated for
clickCCButton error message change.
* platform/ios-simulator/media/video-controls-captions-trackmenu-hide-on-click-expected.txt: Ditto.
* platform/ios-simulator/media/video-controls-captions-trackmenu-localized-expected.txt: Ditto.
* platform/ios-simulator/media/video-controls-captions-trackmenu-sorted-expected.txt: Ditto.


Canonical link: https://commits.webkit.org/179084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204601 268f45cc-cd09-0410-ab3c-d52691b4dbfc